# faust_intro

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: demo.py  demo_producer.py  recursive_demo.py
