[tool.poetry]
name = "faust_intro"
version = "0.1.0"
description = ""
authors = ["Brian Stearns <brian.stearns@kensho.com>"]

[tool.poetry.dependencies]
python = "^3.6"
faust = "^1.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
